[gd_scene load_steps=8 format=3 uid="uid://cbuux1n4snffx"]

[ext_resource type="Script" uid="uid://bpvl0dcv5jimw" path="res://Enemies/Turret/turret_1.gd" id="1_mm85b"]
[ext_resource type="Texture2D" uid="uid://bshfkgmrs805v" path="res://Img_assests/Torret/turret1/base.png" id="2_8jw6i"]
[ext_resource type="Texture2D" uid="uid://p3sb5pi6o58i" path="res://Img_assests/Torret/turret1/top.png" id="3_8jw6i"]
[ext_resource type="PackedScene" uid="uid://ti6tn58jpx1l" path="res://Enemies/Turret/guard.tscn" id="3_swfx4"]
[ext_resource type="PackedScene" uid="uid://bv81mq5hwr28i" path="res://Objects/Lights/glow/glow.tscn" id="5_6fobd"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_swfx4"]
size = Vector2(1971, 1381)

[sub_resource type="CircleShape2D" id="CircleShape2D_apq2m"]
radius = 76.0263

[node name="turret_1" type="CharacterBody2D"]
z_as_relative = false
y_sort_enabled = true
script = ExtResource("1_mm85b")

[node name="AttackZone" type="Area2D" parent="."]
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackZone"]
visible = false
shape = SubResource("RectangleShape2D_swfx4")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
scale = Vector2(1.5, 1.5)
shape = SubResource("CircleShape2D_apq2m")

[node name="Base" type="Sprite2D" parent="."]
z_as_relative = false
y_sort_enabled = true
scale = Vector2(1.2, 1.2)
texture = ExtResource("2_8jw6i")

[node name="GunSprite" type="Node2D" parent="."]
z_index = 2
position = Vector2(0.477509, 0.34758)
rotation = 1.5708
scale = Vector2(1.5, 1.5)

[node name="BulletPos" type="Marker2D" parent="GunSprite"]
position = Vector2(-0.232535, -225.015)
rotation = -1.5708
scale = Vector2(0.666667, 0.666667)

[node name="cartridge" type="Marker2D" parent="GunSprite"]
position = Vector2(35.7681, -43.0151)
rotation = -1.5708
scale = Vector2(0.666667, 0.666667)

[node name="guard" parent="GunSprite" instance=ExtResource("3_swfx4")]
z_index = 2
z_as_relative = false
y_sort_enabled = true
position = Vector2(0.434562, -106.348)
rotation = -1.5708
scale = Vector2(-1.2, 1.2)

[node name="Sprite2D" type="Sprite2D" parent="GunSprite"]
z_index = 2
z_as_relative = false
y_sort_enabled = true
position = Vector2(-0.898386, 0.318343)
rotation = 1.5708
scale = Vector2(0.8, 0.8)
texture = ExtResource("3_8jw6i")
offset = Vector2(-89.3333, -0.666339)

[node name="glow" parent="GunSprite" instance=ExtResource("5_6fobd")]
z_index = 2
z_as_relative = false
y_sort_enabled = true
position = Vector2(-0.232514, -219.348)
rotation = -1.5708
scale = Vector2(0.833333, 1)

[node name="ShootTimer" type="Timer" parent="."]
